# test_uvx

./: README.md  pyproject.toml
hello/: __main__.py
hello_how_are_you.egg-info/: PKG-INFO  SOURCES.txt
