[project]
name = "hello-how-are-you"
version = "0.1.0"
description = "Hello MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
]

[project.scripts]
hello = "hello.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


